Code cleanup/refactor.
Change-Id: Iba284c9531f16939940f56d20278f3c43fef654a